--- a/theme.css
+++ b/theme.css
@@ -19,7 +19,7 @@ body{
   font-family: 'Raleway', sans-serif;
   font-size: large;
   text-align: center;
-  color: darkblue;
+  color: black;
   background-color: white;
   display: inline-block;
   transition: all .2s;
