--- a/resume/theme.css
+++ b/resume/theme.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+  }
 .name{
   font-family: 'Raleway', sans-serif;
   text-align: center;
@@ -18,6 +21,12 @@
   margin-left: 2%;
   color: gray;
 }
+
+.sub li{
+    font-size: medium;
+    color: gray;
+  }
+
 body{
 	line-height: 150%;
   margin-left: 5%;
